--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-GEMINI_API_KEY=AIzaSyCCJeCKL284Q5dItiv65o1P0LYzYBmXCDg
+GEMINI_API_KEY=
 
 # Kredensial MinIO 
 MINIO_ENDPOINT="localhost:9000"
 MINIO_ACCESS_KEY="minioadmin"
 MINIO_SECRET_KEY="minioadmin"
+
 MINIO_BUCKET_NAME="putusan-pdf"
